test/visibility/import/noUnscoreRename.good
noUnscoreRename.chpl:5: error: syntax error near '_'
